Avant réu 16 mai

--- a/latex/_meta.tex
+++ b/latex/_meta.tex
@@ -97,7 +97,8 @@
 \schoolyear{2020--2021}
 
 % Date du rendu (utiliser à diverse endroit)
-\date{\today}
+%\date{\today}
+\date{17 juin 2022}
 
 % Lieu de rendu (pour la signature)
 \location{Yverdon-les-Bains}
