--- a/latex/biblio-to-sort.bib
+++ b/latex/biblio-to-sort.bib
@@ -1,73 +1,4 @@
 
-@article{panja_smart_2020,
-	title = {A Smart Contract System for Decentralized Borda Count Voting},
-	volume = {67},
-	doi = {10.1109/TEM.2020.2986371},
-	pages = {1323--1339},
-	number = {4},
-	journaltitle = {{IEEE} Trans. Engineering Management},
-	author = {Panja, Somnath and Bag, Samiran and Hao, Feng and Roy, Bimal Kumar},
-	date = {2020},
-	keywords = {À lire},
-	file = {A_Smart_Contract_System_for_Decentralized_Borda_Count_Voting.pdf:/home/elerille/Zotero/storage/P72K9XD9/A_Smart_Contract_System_for_Decentralized_Borda_Count_Voting.pdf:application/pdf;Version acceptée:/home/elerille/Zotero/storage/9LLVBTA3/Panja et al. - 2020 - A Smart Contract System for Decentralized Borda Co.pdf:application/pdf},
-}
-
-@article{emerson_original_2013,
-	title = {The original Borda count and partial voting},
-	volume = {40},
-	doi = {10.1007/s00355-011-0603-9},
-	pages = {353--358},
-	number = {2},
-	journaltitle = {Soc. Choice Welf.},
-	author = {Emerson, Peter},
-	date = {2013},
-	keywords = {À lire, Interessant personnelement},
-	file = {Emerson - 2013 - The original Borda count and partial voting.pdf:/home/elerille/Zotero/storage/HI9UJVW5/Emerson - 2013 - The original Borda count and partial voting.pdf:application/pdf},
-}
-
-@inreference{noauthor_scrutin_2021,
-	title = {Scrutin proportionnel plurinominal},
-	rights = {Creative Commons Attribution-{ShareAlike} License},
-	url = {https://fr.wikipedia.org/w/index.php?title=Scrutin_proportionnel_plurinominal&oldid=189267036},
-	abstract = {Le mode de scrutin proportionnel plurinominal (également appelé représentation proportionnelle à scrutin de liste, {RPSL}) est un système électoral où le nombre de sièges à pourvoir est partagé en fonction du nombre de voix recueillies. C'est le système électoral proportionnel le plus répandu parmi les États indépendants et les territoires semi-autonomes qui tiennent des élections parlementaires au scrutin direct. Il est né au {XIXe} siècle avec l'apparition des partis politiques. Il semble que l'inventeur de la représentation proportionnelle soit Victor Considerant, dans un ouvrage paru en 1846. Les premiers systèmes pour le mettre en place ont d'abord été proposés par des mathématiciens et portent souvent le nom de leurs auteurs. La Belgique fut la première à adopter le scrutin proportionnel pour ses députés en 1899 (méthode D'Hondt élaborée par Victor D'Hondt).},
-	booktitle = {Wikipédia},
-	urldate = {2022-02-27},
-	date = {2021-12-27},
-	langid = {french},
-	note = {Page Version {ID}: 189267036},
-	file = {Snapshot:/home/elerille/Zotero/storage/RS45WJQV/Scrutin_proportionnel_plurinominal.html:text/html},
-}
-
-@article{nurmi_voting_1983,
-	title = {Voting Procedures: A Summary Analysis},
-	volume = {13},
-	issn = {1469-2112, 0007-1234},
-	url = {https://www.cambridge.org/core/journals/british-journal-of-political-science/article/voting-procedures-a-summary-analysis/67C52E7250EB4B88018B22D59CAA6908},
-	doi = {10.1017/S0007123400003215},
-	shorttitle = {Voting Procedures},
-	abstract = {Roughly two centuries ago the Marquis de Condorcet and Chevalier Jean-Charles de Borda originated a research tradition – by no means a continuous one – that over the decades has produced results casting doubt on many widely used collective decision-making procedures. The phenomenon known as the Condorcet effect or the Condorcet paradox is the well-known problem of the simple majority rule. The paradox bearing the name of Borda is less commonly known, but it also relates to a procedure that is widely used, namely the plurality principle. Either one of these paradoxes is serious enough to make these procedures suspect unless one is convinced that the situations giving rise to these paradoxical features are extremely rare. In this article we review some voting procedures that have been introduced in the literature. We aim at giving a synthesis of the assessments of procedures with respect to various criteria.},
-	pages = {181--208},
-	number = {2},
-	journaltitle = {British Journal of Political Science},
-	author = {Nurmi, Hannu},
-	urldate = {2022-03-10},
-	date = {1983-04},
-	langid = {english},
-	note = {Publisher: Cambridge University Press},
-	file = {Full Text PDF:/home/elerille/Zotero/storage/76D5LD28/Nurmi - 1983 - Voting Procedures A Summary Analysis.pdf:application/pdf;Snapshot:/home/elerille/Zotero/storage/7ST6MDDQ/67C52E7250EB4B88018B22D59CAA6908.html:text/html},
-}
-
-@article{bag_e2e_2019,
-	title = {E2E Verifiable Borda Count Voting System without Tallying Authorities},
-	doi = {10.1145/3339252.3339259},
-	abstract = {An end-to-end verifiable (E2E) voting system enables candidates, voters and observers to monitor the integrity of an election process and verify the results without relying on trusted systems. In this paper, we propose a {DRE}-based Borda count e-voting system called {DRE}-Borda. The proposed system is E2E verifiable without involving any tallying authorities. Furthermore, it outputs only the total score a candidate gets without revealing any other information such as the breakdown of scores with respect to different ranks. This reduces the information leakage from the tallying result to the minimum, hence effectively preventing Italian attacks. When the {DRE} machine is completely compromised, the integrity of the tallying result is still preserved and what an adversary can learn from a compromised machine is strictly limited to the partial tally at the time of compromise.},
-	journaltitle = {{ARES}},
-	author = {Bag, Samiran and {Samiran Bag} and Azad, Muhammad Ajmal and Hao, Feng},
-	date = {2019-08-26},
-	doi = {10.1145/3339252.3339259},
-	note = {{MAG} {ID}: 2968598223},
-}
-
 @inproceedings{adida_helios_2008,
 	title = {Helios: Web-based Open-Audit Voting},
 	url = {http://www.usenix.org/events/sec08/tech/full_papers/adida/adida.pdf},
@@ -116,6 +47,18 @@
 	urldate = {2022-05-09},
 	date = {2010},
 	file = {Version soumise:/home/elerille/Zotero/storage/AUMDF46A/Chevallier-Mames et al. - 2010 - On Some Incompatible Properties of Voting Schemes.pdf:application/pdf},
+}
+
+@inproceedings{desmedt_threshold_1989,
+	title = {Threshold Cryptosystems},
+	url = {https://doi.org/10.1007/0-387-34805-0\_28},
+	doi = {10.1007/0-387-34805-0_28},
+	pages = {307--315},
+	booktitle = {Advances in Cryptology - {CRYPTO} '89, 9th Annual International Cryptology Conference, Santa Barbara, California, {USA}, August 20-24, 1989, Proceedings},
+	author = {Desmedt, Yvo and Frankel, Yair},
+	urldate = {2022-05-09},
+	date = {1989},
+	file = {Texte intégral:/home/elerille/Zotero/storage/BYZ5SYHP/Desmedt et Frankel - 1989 - Threshold Cryptosystems.pdf:application/pdf},
 }
 
 @inproceedings{gharadaghy_verifiability_2010,
@@ -199,6 +142,23 @@
 	file = {ScienceDirect Full Text PDF:/home/elerille/Zotero/storage/PZLE3ML7/Vassil et al. - 2016 - The diffusion of internet voting. Usage patterns o.pdf:application/pdf;ScienceDirect Snapshot:/home/elerille/Zotero/storage/AWJMHGHK/S0740624X1630096X.html:text/html},
 }
 
+@article{peters_education_2017,
+	title = {Education in a post-truth world},
+	volume = {49},
+	issn = {0013-1857},
+	url = {https://doi.org/10.1080/00131857.2016.1264114},
+	doi = {10.1080/00131857.2016.1264114},
+	pages = {563--566},
+	number = {6},
+	journaltitle = {Educational Philosophy and Theory},
+	author = {Peters, Michael A.},
+	urldate = {2022-05-09},
+	date = {2017-05-12},
+	note = {Publisher: Routledge
+\_eprint: https://doi.org/10.1080/00131857.2016.1264114},
+	file = {Snapshot:/home/elerille/Zotero/storage/F73FR2L2/00131857.2016.html:text/html;Texte intégral:/home/elerille/Zotero/storage/XN269NI9/Peters - 2017 - Education in a post-truth world.pdf:application/pdf},
+}
+
 @article{pieters_what_nodate,
 	title = {What proof do we prefer? Variants of veriﬁability in voting},
 	abstract = {In this paper, we discuss one particular feature of Internet voting, veriﬁability, against the background of scientiﬁc literature and experiments in the Netherlands. In order to conceptually clarify what veriﬁability is about, we distinguish classical veriﬁability from constructive veriﬁability in both individual and universal veriﬁcation. In classical individual veriﬁability, a proof that a vote has been counted can be given without revealing the vote. In constructive individual veriﬁability, a proof is only accepted if the witness (i.e. the vote) can be reconstructed. Analogous concepts are deﬁned for universal veriﬁability of the tally. The {RIES} system used in the Netherlands establishes constructive individual veriﬁability and constructive universal veriﬁability, whereas many advanced cryptographic systems described in the scientiﬁc literature establish classical individual veriﬁability and classical universal veriﬁability.},
@@ -231,6 +191,18 @@
 	file = {Version soumise:/home/elerille/Zotero/storage/8Q5IDKWP/Saltman - 1988 - Accuracy, Integrity and Security in Computerized V.pdf:application/pdf},
 }
 
+@inproceedings{schnorr_efficient_1989,
+	title = {Efficient Identification and Signatures for Smart Cards},
+	url = {https://doi.org/10.1007/0-387-34805-0\_22},
+	doi = {10.1007/0-387-34805-0_22},
+	pages = {239--252},
+	booktitle = {Advances in Cryptology - {CRYPTO} '89, 9th Annual International Cryptology Conference, Santa Barbara, California, {USA}, August 20-24, 1989, Proceedings},
+	author = {Schnorr, Claus-Peter},
+	urldate = {2022-05-09},
+	date = {1989},
+	file = {Texte intégral:/home/elerille/Zotero/storage/B4BLDYS2/Schnorr - 1989 - Efficient Identification and Signatures for Smart .pdf:application/pdf},
+}
+
 @inproceedings{springall_security_2014,
 	title = {Security Analysis of the Estonian Internet Voting System},
 	doi = {10.1145/2660267.2660315},
@@ -239,11 +211,4 @@
 	author = {Springall, Drew and Finkenauer, Travis and Durumeric, Zakir and Kitcat, Jason and Hursti, Harri and {MacAlpine}, Margaret and Halderman, J. Alex},
 	date = {2014},
 	file = {Texte intégral:/home/elerille/Zotero/storage/R8PZR6M3/Springall et al. - 2014 - Security Analysis of the Estonian Internet Voting .pdf:application/pdf},
-}
-
-@online{noauthor_helios_nodate,
-	title = {Helios Voting},
-	url = {https://vote.heliosvoting.org/},
-	urldate = {2022-05-12},
-	file = {Helios Voting:/home/elerille/Zotero/storage/V7B7S6HH/vote.heliosvoting.org.html:text/html},
 }
