--- a/latex/bibliography-draft.tex
+++ b/latex/bibliography-draft.tex
@@ -1,6 +1,8 @@
 \documentclass[a4paper,twoside,12pt,french]{heig-bachelor}
 
 \usepackage[style=draft]{biblatex}
+\addbibresource{biblio.bib}
+\addbibresource{biblio-to-sort.bib}
 
 \nocite{*}
 
