--- a/latex/report.tex
+++ b/latex/report.tex
@@ -95,6 +95,13 @@
     \subfile{content/introduction}
     \subfile{content/diff-methode}
     \subfile{content/crypto-requirements}
+    
+    % sec lecture d'article
+    % sec Risque et cass d'utilisation
+    % sec 
+    % Resultat
+
+
     \subfile{content/biblio-analyse}
     %\subfile{content/example}
 
