--- a/latex/content/introduction.tex
+++ b/latex/content/introduction.tex
@@ -2,6 +2,31 @@
 \begin{document}
   \chapter{Introduction}
 
+  \section{Définition}
+
+  \paragraph{Vote électronique ou e-voting}
+  Vote effectuer grâce à des outils informatique.
+  Ce terme peut à la fois désigner un vote effectuer à distance via Internet ou un vote effectuer
+  dans un bureau de vote à l'aide d'une machine à voter.
+  Dans ce document nous nous focalisons sur le vote électronique à distance.
+  Lorsque ce n'est pas préciser, nous parlons du vote électronique à distance et non pas dans un bureau de vote.
+
+  \paragraph{Comptage électronique}
+  \todo{}
+  
+  \paragraph{NIZK proof of knoledge}
+  \todo{}
+
+  \paragraph{Élection ou votation}
+  Une élection est le fait qu'un groupe de personne (les électeurices) choississent une (ou plusieurs) personne
+  pour les représenter ou pour toutes autres tâche.
+  Une votation est le fait qu'un groupe de personne (les votant·es) choissient une (ou des) options.
+  Une élection est donc simplement une votations ou les options possibles sont des personnes.
+  Ce document ne précise pas à chaque fois que ce qui est dit pour l'un est également valable pour l'autre de 
+  manière générale.
+
+
+
   \section{Type de méthode de scrutin analyser}
   \section{candidat vs options}
   \section{Vote blanc/nuls/abstentions dans les simulations}
