--- a/latex/report.tex
+++ b/latex/report.tex
@@ -5,7 +5,7 @@
 % Preamble
 %\documentclass[a4paper,oneside,12pt,french,draft]{heig-tb}
 %\documentclass[a4paper,twoside,12pt,french,draft]{heig-tb}
-\documentclass[a4paper,twoside,12pt,french]{heig-bachelor}
+\documentclass[a4paper,oneside,12pt,french]{heig-bachelor}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % package include
@@ -95,14 +95,11 @@
     \subfile{content/introduction}
     \subfile{content/diff-methode}
     \subfile{content/crypto-requirements}
-    
-    % sec lecture d'article
-    % sec Risque et cass d'utilisation
-    % sec 
-    % Resultat
 
+    \subfile{content/implementation}
+    \subfile{content/resultat}
 
-    \subfile{content/biblio-analyse}
+    %\subfile{content/biblio-analyse}
     %\subfile{content/example}
 
 
