--- a/latex/_meta.tex
+++ b/latex/_meta.tex
@@ -103,3 +103,25 @@
 % Lieu de rendu (pour la signature)
 \location{Yverdon-les-Bains}
 
+    \lstset{
+      belowcaptionskip=1\baselineskip,
+      breaklines=true,
+      frame=L,
+      xleftmargin=\parindent,
+      showstringspaces=false,
+      basicstyle=\footnotesize\ttfamily,
+      keywordstyle=\bfseries\color{green!40!black},
+      commentstyle=\itshape\color{purple!40!black},
+      identifierstyle=\color{blue},
+      stringstyle=\color{orange},
+      backgroundcolor=\color{white!90!black},
+      tabsize=3,
+      frameround=fttt,
+      frame=trBL,
+      %inputpath=...,
+    }
+    \lstdefinestyle{numbers}{
+      numbers=left,
+      numberstyle=\scriptsize,
+    }
+
