report avec todo

--- a/latex/content/cahier-des-charges.tex
+++ b/latex/content/cahier-des-charges.tex
@@ -10,7 +10,7 @@ Actuellement la plupart des votes se font avec un système à la majorité (rela
 De par l'utilisation quasi exclusive du vote majoritaire, les quelques applications ou sites web permettant de faire un choix de manière anonyme utilisent ce système.
 
 \section{Cahier des charges}
-\subsection{Objectif principal}
+\subsection{Objectif principal}\label{ssec:cdc:cdc:objprinc}
 \begin{enumerate}
   \item Études des méthodes de vote alternatif, quel sont leurs avantages et leurs inconvénients.
   \item Identifier les propriétés cryptographiques nécessaires aux différentes méthodes de vote pour permettre la sécurité et la confidentialité du vote~:
