--- a/latex/content/crypto-requirements.tex
+++ b/latex/content/crypto-requirements.tex
@@ -6,7 +6,9 @@ Concept important voir necessaire~\cite{gharadaghy_verifiability_2010}
 
 Les bulletins de vote chiffré y sont publié et ne peuvent pas y être retiré.
 Tout le monde (votants, calculateur du résultat et observateur) y on accès en lecture.
+\todo{}
 \section{Authentification du votant}
+\todo{}
 \section{Confidentialité du vote}
 La confidentialité du vote est le fait que personne ne peut faire le lien entre une personne
 et ce qu'elle a voté.
@@ -16,6 +18,7 @@ Un confidentialité inconditionnel (c.-à-d.\ quelque soit le niveau de compromi
 est incompatible avec la vérifiabilité universelle (même c.-à-d.) du 
 résultat~\cite{chevallier-mames_incompatible_2010,gharadaghy_verifiability_2010}.
 \todo{\originalcite{chevallier-mames_incompatible_2010} n'est pas accessible → vérifié les infos de l'abstract dans d'autre document}
+\todo{}
 
 \subsection{Vote sans contrainte possible}
 
@@ -23,6 +26,7 @@ Pour qu'il n'y a pas de contrainte possible sur le votant, ce dernier ne doit pa
 ce qu'il a voté. 
 Si le votant choisi ou est contraint de prouver le choix de vote qu'il a fait, cela limit
 son libre choix pour le vote.
+\todo{}
 
 \section{Verifiabilité}
 
@@ -34,10 +38,12 @@ son libre choix pour le vote.
   Cela vaut lors de la vérification du décompte mais également 
   lors de la vérification par le votant de son vote.
 \end{important}
+\todo{}
 
 \subsection{pour le votant}
 Le votant reçois immédiatement une preuve que son vote a belle et bien été pris en 
 compte~\cite{adida_ballot_2006}.
+\todo{ci-dessus, pas le cas chez moi}
 
 Dans Helios~\cite{noauthor_helios_nodate}, si Alice vérifie que son bulletin contient
 correctement sont vote, le système l'empèche d'utilise ce bulletin comme vote pour limiter
@@ -47,5 +53,6 @@ Alice n'a ainsi pas de preuve qu'elle peut fournir à autrui de ce qu'elle a vot
 
 \subsection{du résultat}
 N'importe qui (même ne participant pas à la votation) peux vérifié le résultat.
+\todo{}
 
 \end{document}
