--- a/latex/content/introduction.tex
+++ b/latex/content/introduction.tex
@@ -25,20 +25,25 @@
   Ce document ne précise pas à chaque fois que ce qui est dit pour l'un est également valable pour l'autre de 
   manière générale.
 
+  \paragraph{Vote utile}\aref{diff:comp:util:util}
+  \todo{}
+  \paragraph{Quorum}
+  \todo{}
 
 
   \section{Type de méthode de scrutin analyser}
+  \todo{parler des scrutins exclusivements pour des élections vs permettant également de prendre des décisions}
   \section{candidat vs options}
   \section{Vote blanc/nuls/abstentions dans les simulations}
-  \section{Exemple fictif}
+  \todo{Indiquer que les simulations faites dans ce document se base toutes sur une participation total, cepedant il y a la possibilité dans certain scrutin de refusé de classé certain candidat/option}
   \section{referendhum cas particulier d'une élection}
+  \todo{un referendhum est juste une élection où les candidats sont "pour" et "contre"}
+  \todo{Indiquer que l'on peut faire mieux}
 
-  \section{Définition et abréviation}
+  \section{Exemple}
+  \todo{Certain exemple dans ce document sont issu de cas réel, ceci uniquement affin de montrer la plausibilité d'un tel cas, bien sûr le fonctionnement est identique en cas d'inversion des bords politiques des candidats/options dans les exemples}
   
-  \begin{description}
-    \item[vote utile] \aref{diff:comp:util:util}
-    \item[quorum]
-  \end{description}
+  \todo{Montrer des exemples et expliquer les tableaux}
 
   \todo{Alice est la votante dans les exemples, présenté un exemple de structure utilisé dans 
   le document}
