--- a/latex/content/diff-methode.tex
+++ b/latex/content/diff-methode.tex
@@ -24,6 +24,70 @@
 
   \part{Analyse des différents types de scrutins}
 
+\chapter{Cas d'utilisations}
+
+De manière générale l'utilisation du vote électronique par rapport à un vote traditionel ouvre la voie à 
+des attaques qui était jusqu'à présent impossible. 
+
+Lorsque l'action de voter ne se fait plus dans un isoloire dans un bureau de vote (ce qui est déjà le cas
+pour le vote par correspondance suisse) il y a une plus grande possibilité de coércition des votants.
+On ne pourra jamais exclure que des votants aient été contraint dans leur choix. 
+Le vote électronique ne résouds pas ce problème.
+
+\section{Cas d'utilisations}
+\subsection{Vote lors d'une assemblée}
+
+Lors d'un assemblée d'une association ou d'une entreprise/coopérative, les décisions sont souvant prise avec
+des votations sur des propositions.
+C'est votations peuvent être faites par e-voting dans la majorité des cas, cela permet de limité les erreurs 
+de comptage et d'avoir un résultat plus rapide s'il y a beaucoup de monde.
+Le vote électronique permet également d'avoir une plus grande confiance dans les résulats, car on ne fait pas 
+confience à un petit groupe chargé du décompte des voix (groupe qui ne contient pas toujours de personne de 
+chaque position possible).
+
+Le corruption des personnes chargées du décompte peux être facile, alors que si l'application utilisé pour
+l'e-voting est externe au groupe, il peut être beaucoup plus difficile de les corrompre.
+
+\begin{important}{Vote d'importance}
+  Même pour de petite structure, il peut avoir des risques importants à utilisé un système de vote électronique, 
+  notament s'il y a un ou des oppansants puissants (économiquement, politiquement ou informatiquement), et ce que
+  se soit par rapport à un vote spécifique ou de manière globale à la structure.
+\end{important}
+
+\todo{Autre cas d'utilisation?}
+%\section{Sondage rapide et anonyme au sein d'un groupe}
+%
+%Lorsqu'on fait des sondages, il peut être difficile de garantir l'anonymat des réponses. 
+%S'il y a besoin d'anonymat et de rapidité, l'utilisation d'une solution de e-voting peut permettre d'organiser 
+%de tel sondage. 
+
+.
+
+\section{Cas de NON-utilisation}
+
+Les cas suivants ne devrait pas utilisé de vote électronique pour leurs votations. 
+Dans le cas où il l'utiliserait quand même, une analyse détaillée des risques doit être fait au préalable.
+
+\subsection{Élection à l'échel d'un pays}\label{sec:impl:non-use:pays}
+Utiliser le vote électronique pour une élection ou une votation d'un pays n'est pas une bonne idée.
+Il y a toujours des risques dû à l'utilisation de logiciel informatique, et quand bien même le logiciel de 
+votation serais exempt de vulnérabilité il y aurait toujours des menaces grâve qui peserais sur la votation.
+\begin{itemize}
+  \item des attaques visants les ordinateurs des votants
+  \item la circulation de fausse application de vote
+  \item des attaques visants Internet ou le réseau utiliser pour voter
+\end{itemize}
+
+La vie politique d'un pays ne doit pas pouvoir être contrôler par un petit groupe de personne, sans accord 
+explicite de toute la population.
+
+\subsection{Votation d'importance stratégique}
+Lorsqu'une votation a une certaine importance stratégique (pour l'entreprise, la collectivité ou l'organisation qui l'organise)
+et que l'on peux suspecter qu'il y a des personnes externe qui aient un intérêt pour une options ou une 
+autre,\footnote{Que cette personne existe ou non, le simple fait que l'on ne soit pas sûre est suffisant}
+cette votation ne devrait donc pas être faite via de l'e-voting. 
+Les vulnérabilités non-mitigeable sont les même qu'à la \aaref{sec:impl:non-use:pays}
+
   \chapter{Critère de comparaison}
   
 
@@ -69,6 +133,8 @@
   La quasi-unanimité du vote, c'est lorsque presque l'ensemble des électeurs préfèrent 
   une option (A) à une autre option (B), alors cette deuxième option (B) n'est jamais élue.
   Il y a différente méthode de vote qui ne respecte pas la quasi-unanimité du vote.
+
+  \todo{Théorème: Borda ?}
 
   \section{Manipulabilité et vote utile}
 
@@ -228,7 +294,37 @@
   Les compromis entre candidats sont également impossibles.
 
   Un scrutin à plusieurs tours réel permet d'améliorer le débat politique, même si un scrutin 
-  à 10 tours lassait certainement plus que le bénéfice possible.
+  à 10 tours lasserait certainement plus que le bénéfice possible.
+
+  \section{Évaluation}
+
+  \todo{Décrire les critères d'évaluation, et véfifier leur application}
+  \begin{center}
+    \begin{tabular}{r|c|p{20em}}
+      \hline
+      Critère & Évaluation & Raison \\
+      \hline
+      \hline
+      Avis des perdants & \cellcolor{red}trés mauvais &  \\
+      Avis des perdants & \cellcolor{red}mauvais &  \\
+      Avis des perdants & \cellcolor{green!25!yellow}correct &  \\
+      Avis des perdants & \cellcolor{green}bien &  \\
+      \hline
+      Indépendance aux petits candidats & \cellcolor{red}mauvais & \\
+      Indépendance aux petits candidats & \cellcolor{orange}moyen & \\
+      Indépendance aux petits candidats & \cellcolor{green}bien & \\
+      \hline
+      Quasi unanimité du vote & \cellcolor{red}mauvais & \\
+      Quasi unanimité du vote & \cellcolor{orange}moyen & \\
+      Quasi unanimité du vote & \cellcolor{green}bien & \\
+      \hline
+      Manipulabilité & \cellcolor{red}mauvais &  \\
+      Manipulabilité & \cellcolor{orange}moyen &  \\
+      Manipulabilité & \cellcolor{green!25!yellow}correct &  \\
+      Manipulabilité & \cellcolor{green}bien &  \\
+      \hline
+    \end{tabular}
+  \end{center}
 
   \chapter{Les scrutins}
 
@@ -248,7 +344,7 @@
     $ \geqslant 4.5 $.
     Le candidat A se retrouve donc élu avec une définition et non élu avec l'autre.
 
-    Dans ce document seule la définition $> 50\%$ a été utilisée
+    Dans ce document et le code associé seule la définition $> 50\%$ a été utilisée
   \end{important}
 
   \section{Scrutin proportionnel plurinominal}
